Added multi-dimensional Object array tests